--- a/src/components/ProductLandingPage/Hero/Hero.scss
+++ b/src/components/ProductLandingPage/Hero/Hero.scss
@@ -1,5 +1,13 @@
+html[data-theme='dark'] {
+  .product-hero-container {
+    border-bottom: 1px solid var(--ifm-color-emphasis-100);
+  }
+}
+
 // Terraform Styling
 .product-hero-container {
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
   display: flex;
   min-height: 500px;
   align-items: center;
