--- a/src/components/ProductLandingPage/Providers/Providers.scss
+++ b/src/components/ProductLandingPage/Providers/Providers.scss
@@ -1,9 +1,28 @@
+html[data-theme='dark'] {
+  .providers-container {
+    border-bottom: 1px solid var(--ifm-color-emphasis-100);
+  }
+
+  .providers-container,
+  .provider-cards-container,
+  .info-card-container {
+    background-color: var(--ifm-background-color);
+  }
+
+  .info-card-container {
+    border: 1px solid var(--ifm-color-emphasis-100);
+  }
+}
+
 .providers-container {
   background-color: #F2F2F3;
   padding: 3rem 0 3rem 0;
   margin-left: calc(50% - 50vw);
   width: 100vw;
-  @media (max-width: 768px) { margin-top: 3rem; }
+
+  @media (max-width: 768px) {
+    margin-top: 3rem;
+  }
 }
 
 .providers-header {
@@ -11,13 +30,21 @@
   text-align: center;
   margin: auto;
   padding: 0 1rem 3rem 1rem;
-  h1 { color: black; }
-  p { color: #727274 }
+
+
+  h1 {
+    color: var(--ifm-color-emphasis-900);
+  }
+
+
+  p {
+    color: #727274
+  }
 }
 
 .provider-cards-container {
   display: flex;
-  justify-content: center; 
+  justify-content: center;
   flex-wrap: wrap;
   grid-gap: 2rem;
   min-height: 500px;
@@ -25,7 +52,12 @@
   margin: auto;
 
   .info-card-container {
-    h3 { color: black; }
-    p { color: #727274; }
+    h3 {
+      color: var(--ifm-color-emphasis-900);
+    }
+
+    p {
+      color: #727274;
+    }
   }
 }
